--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <a class="navbar-brand logo" href="#">
                 <i class="fas fa-gem"></i>
-                Gradient Co
+                Arrack කඩේ
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav2">
@@ -43,7 +43,27 @@
             </div>
         </div>
     </nav>
-
+    <section class="hero-1 d-flex align-items-center justify-content-center text-white">
+        <div class="container text-center">
+            <div class="row">
+                <div class="col-lg-6 mx-auto">
+                    <h1 class="display-3 fw-bold mb-4">Arrack කඩේ</h1>
+                    <p class="lead mb-5">Create stunning digital experiences that drive results and grow your business.
+                    </p>
+                    <div class="d-flex gap-3 justify-content-center">
+                        <button class="btn btn-primary btn-lg" >
+                            <i class="fas fa-rocket me-2"></i>
+                            Get Started
+                        </button>
+                        <button class="btn btn-outline-light btn-lg">
+                            Learn More
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    
 </body>
 
 </html>
