Add Product Details

--- a/index.html
+++ b/index.html
@@ -48,15 +48,16 @@
             <div class="row">
                 <div class="col-lg-6 mx-auto">
                     <h1 class="display-3 fw-bold mb-4">Arrack කඩේ</h1>
-                    <p class="lead mb-5">Create stunning digital experiences that drive results and grow your business.
+                    <p class="lead mb-5">“Arrack කඩේ – Premium quality arrack and unique flavoured blends, crafted for a
+                        smooth and refreshing experience.”
                     </p>
                     <div class="d-flex gap-3 justify-content-center">
-                        <button class="btn btn-primary btn-lg" >
-                            <i class="fas fa-rocket me-2"></i>
-                            Get Started
-                        </button>
+                        <a href="#product"><button class="btn btn-primary btn-lg">
+                                <i class="fas fa-rocket me-2"></i>
+                                Get Started
+                            </button></a>
                         <button class="btn btn-outline-light btn-lg">
-                            Learn More
+                            Contact Us
                         </button>
                     </div>
                 </div>
@@ -64,14 +65,15 @@
         </div>
     </section>
     <div class="container py-5" id="product">
-        <h1 class="text-center mb-5">Our Latest Products</h1>
+        <h1 class="text-center mb-5">Our Products</h1>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
             <div class="col">
                 <div class="card h-100">
                     <img src="assets/image/green.png" class="card-img-top" alt="Product 1">
                     <div class="card-body">
-                        <h5 class="card-title">Product 1</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <h5 class="card-title">Green Apple Flavour Arrack</h5>
+                        <p class="card-text">A smooth arrack infused with the crisp, tangy freshness of green apples for
+                            a zesty, refreshing taste.</p>
                         <a href="#" class="btn btn-primary">Buy Now</a>
                     </div>
                 </div>
@@ -80,8 +82,9 @@
                 <div class="card h-100">
                     <img src="assets/image/gold.png" class="card-img-top" alt="Product 2">
                     <div class="card-body">
-                        <h5 class="card-title">Product 2</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <h5 class="card-title">Gold Flavour Arrack</h5>
+                        <p class="card-text">A premium smooth arrack enriched with golden notes of warmth and richness
+                            for an elegant, refined taste.</p>
                         <a href="#" class="btn btn-primary">Buy Now</a>
                     </div>
                 </div>
@@ -90,8 +93,9 @@
                 <div class="card h-100">
                     <img src="assets/image/purple.png" class="card-img-top" alt="Product 3">
                     <div class="card-body">
-                        <h5 class="card-title">Product 3</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <h5 class="card-title">Purple Grape Flavour Arrack</h5>
+                        <p class="card-text">A smooth arrack infused with the sweet, juicy essence of ripe purple grapes
+                            for a rich and refreshing taste.</p>
                         <a href="#" class="btn btn-primary">Buy Now</a>
                     </div>
                 </div>
@@ -100,8 +104,9 @@
                 <div class="card h-100">
                     <img src="assets/image/red.png" class="card-img-top" alt="Product 3">
                     <div class="card-body">
-                        <h5 class="card-title">Product 3</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <h5 class="card-title">Red Apple Flavour Arrack</h5>
+                        <p class="card-text">A crisp, smooth arrack infused with the sweet and tangy taste of fresh red
+                            apples for a refreshing twist.</p>
                         <a href="#" class="btn btn-primary">Buy Now</a>
                     </div>
                 </div>
@@ -110,8 +115,9 @@
                 <div class="card h-100">
                     <img src="assets/image/pink.png" class="card-img-top" alt="Product 3">
                     <div class="card-body">
-                        <h5 class="card-title">Product 3</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <h5 class="card-title">Faluda Flavour Arrack</h5>
+                        <p class="card-text">A smooth arrack infused with the sweet, creamy richness of faluda for a
+                            unique exotic taste.</p>
                         <a href="#" class="btn btn-primary">Buy Now</a>
                     </div>
                 </div>
@@ -120,8 +126,53 @@
                 <div class="card h-100">
                     <img src="assets/image/blue.png" class="card-img-top" alt="Product 3">
                     <div class="card-body">
-                        <h5 class="card-title">Product 3</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <h5 class="card-title">Nil Katarolu Flavour Arrack</h5>
+                        <p class="card-text">A smooth arrack infused with the delicate, refreshing essence of blue
+                            butterfly pea (nil katarolu) for a naturally exotic taste.</p>
+                        <a href="#" class="btn btn-primary">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="assets/image/silver.png" class="card-img-top" alt="Product 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Silva Flavour Arrack</h5>
+                        <p class="card-text">A smooth arrack crafted with a bold, distinctive flavour that blends
+                            tradition with a modern twist.</p>
+                        <a href="#" class="btn btn-primary">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="assets/image/kolakeda.png" class="card-img-top" alt="Product 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Kolakenda Flavour Arrack</h5>
+                        <p class="card-text">A smooth arrack infused with the unique, aromatic taste of kolakenda for a
+                            rich and traditional flavor.</p>
+                        <a href="#" class="btn btn-primary">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="assets/image/chocolate.png" class="card-img-top" alt="Product 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Chocolate Flavour Arrack</h5>
+                        <p class="card-text">A smooth arrack blended with rich chocolate notes for a sweet and indulgent
+                            taste.</p>
+                        <a href="#" class="btn btn-primary">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="assets/image/coffe.png" class="card-img-top" alt="Product 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Coffee Flavour Arrack</h5>
+                        <p class="card-text">A smooth arrack infused with the rich, bold essence of coffee for a perfect
+                            aromatic experience.</p>
                         <a href="#" class="btn btn-primary">Buy Now</a>
                     </div>
                 </div>
