--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Flavor Arrack</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
@@ -52,11 +53,11 @@
                         smooth and refreshing experience.”
                     </p>
                     <div class="d-flex gap-3 justify-content-center">
-                        <a href="#product"><button class="btn btn-primary btn-lg">
+                        <a href="#product"><button class="btn btn-primary btn-lg" data-aos="fade-right">
                                 <i class="fas fa-rocket me-2"></i>
                                 Get Started
                             </button></a>
-                        <button class="btn btn-outline-light btn-lg">
+                        <button class="btn btn-outline-light btn-lg" data-aos="fade-left">
                             Contact Us
                         </button>
                     </div>
@@ -67,18 +68,19 @@
     <div class="container py-5" id="product">
         <h1 class="text-center mb-5">Our Products</h1>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-            <div class="col">
-                <div class="card h-100">
-                    <img src="assets/image/green.png" class="card-img-top" alt="Product 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Green Apple Flavour Arrack</h5>
-                        <p class="card-text">A smooth arrack infused with the crisp, tangy freshness of green apples for
-                            a zesty, refreshing taste.</p>
-                        <a href="#" class="btn btn-primary">Buy Now</a>
+                <div class="col" data-aos="zoom-out-up">
+                    <div class="card h-100">
+                        <img src="assets/image/green.png" class="card-img-top" alt="Product 1">
+                        <div class="card-body">
+                            <h5 class="card-title">Green Apple Flavour Arrack</h5>
+                            <p class="card-text">A smooth arrack infused with the crisp, tangy freshness of green apples
+                                for
+                                a zesty, refreshing taste.</p>
+                            <a href="#" class="btn btn-primary">Buy Now</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col">
+            <div class="col" data-aos="zoom-out-up">
                 <div class="card h-100">
                     <img src="assets/image/gold.png" class="card-img-top" alt="Product 2">
                     <div class="card-body">
@@ -89,7 +91,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col" data-aos="zoom-out-up">
                 <div class="card h-100">
                     <img src="assets/image/purple.png" class="card-img-top" alt="Product 3">
                     <div class="card-body">
@@ -100,7 +102,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col" data-aos="zoom-out-up">
                 <div class="card h-100">
                     <img src="assets/image/red.png" class="card-img-top" alt="Product 3">
                     <div class="card-body">
@@ -111,7 +113,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col" data-aos="zoom-out-up">
                 <div class="card h-100">
                     <img src="assets/image/pink.png" class="card-img-top" alt="Product 3">
                     <div class="card-body">
@@ -122,7 +124,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col" data-aos="zoom-out-up">
                 <div class="card h-100">
                     <img src="assets/image/blue.png" class="card-img-top" alt="Product 3">
                     <div class="card-body">
@@ -133,7 +135,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col" data-aos="zoom-out-up">
                 <div class="card h-100">
                     <img src="assets/image/silver.png" class="card-img-top" alt="Product 3">
                     <div class="card-body">
@@ -144,7 +146,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col" data-aos="zoom-out-up">
                 <div class="card h-100">
                     <img src="assets/image/kolakeda.png" class="card-img-top" alt="Product 3">
                     <div class="card-body">
@@ -155,7 +157,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col" data-aos="zoom-out-up">
                 <div class="card h-100">
                     <img src="assets/image/chocolate.png" class="card-img-top" alt="Product 3">
                     <div class="card-body">
@@ -166,7 +168,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col" data-aos="zoom-out-up">
                 <div class="card h-100">
                     <img src="assets/image/coffe.png" class="card-img-top" alt="Product 3">
                     <div class="card-body">
@@ -179,6 +181,8 @@
             </div>
         </div>
     </div>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="assets/js/app.js"></script>
 </body>
 
 </html>
