--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark navbar-gradient fixed-top">
         <div class="container">
-            <a class="navbar-brand logo" href="#">
+            <a class="navbar-brand logo" href="index.html">
                 <i class="fas fa-gem"></i>
                 Arrack කඩේ
             </a>
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarNav2">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Home</a>
+                        <a class="nav-link active" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#product">Product</a>
@@ -38,7 +38,7 @@
                         <a class="nav-link" href="#">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-outline-light ms-2" href="#">Cart</a>
+                        <a class="btn btn-outline-light ms-2" href="cart.html">Cart</a>
                     </li>
                 </ul>
             </div>
