--- a/cart.html
+++ b/cart.html
@@ -47,8 +47,10 @@
 
 
 
+
     <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="assets/js/cart.js"></script>
 </body>
 
 </html>
