--- a/index.html
+++ b/index.html
@@ -12,38 +12,10 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-gradient fixed-top">
-        <div class="container">
-            <a class="navbar-brand logo" href="index.html">
-                <i class="fas fa-gem"></i>
-                Arrack කඩේ
-            </a>
+    <!-- nav bar -->
+    <div id="navBarLoad"></div>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav2">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarNav2">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#product">Product</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="btn btn-outline-light ms-2" href="cart.html">Cart</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    
     <section class="hero-1 d-flex align-items-center justify-content-center text-white">
         <div class="container text-center">
             <div class="row">
@@ -70,7 +42,7 @@
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4" id="mainAdd"></div>
     </div>
 
-    <section class="hero-1 d-flex align-items-center justify-content-center text-white">
+    <section class="hero-1 d-flex align-items-center justify-content-center text-white" id="about">
         <div class="container text-center">
             <div class="row">
                 <div class="col-lg-6 mx-auto">
@@ -150,6 +122,7 @@
         
 
     </footer>
+    <script src="assets/js/nav.js"></script>
     <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="assets/js/app.js"></script>
