--- a/cart.html
+++ b/cart.html
@@ -45,7 +45,7 @@
         </div>
     </nav>
 
-    <section class="h-100 h-custom p-5" style="background-color: #d2c9ff;">
+    <section class="h-100 h-custom p-5" style="background-color: #ffffff;">
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-12">
