complete concact page

--- a/cart.html
+++ b/cart.html
@@ -12,38 +12,9 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-gradient fixed-top">
-        <div class="container">
-            <a class="navbar-brand logo" href="index.html">
-                <i class="fas fa-gem"></i>
-                Arrack කඩේ
-            </a>
+    <div id="navBarLoad"></div>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav2">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarNav2">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#product">Product</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="btn btn-outline-light ms-2" href="cart.html">Cart</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    
 
     <section class="h-100 h-custom p-5" style="background-color: #ffffff;">
         <div class="container py-5 h-100">
@@ -103,7 +74,7 @@
     </section>
 
 
-
+    <script src="assets/js/nav.js"></script>
     <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="assets/js/cart.js"></script>
