--- a/cart.html
+++ b/cart.html
@@ -62,7 +62,7 @@
 
                                         <button type="button" data-mdb-button-init data-mdb-ripple-init
                                             class="btn btn-dark btn-block btn-lg"
-                                            data-mdb-ripple-color="dark">Buy</button>
+                                            data-mdb-ripple-color="dark" onclick="clearCart()">Buy</button>
                                     </div>
                                 </div>
                             </div>
