--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- nav bar -->
     <div id="navBarLoad"></div>
 
-    
+
     <section class="hero-1 d-flex align-items-center justify-content-center text-white">
         <div class="container text-center">
             <div class="row">
@@ -29,9 +29,9 @@
                                 <i class="fas fa-rocket me-2"></i>
                                 Get Started
                             </button></a>
-                        <button class="btn btn-outline-light btn-lg" data-aos="fade-left">
-                            Contact Us
-                        </button>
+                        <a href="contact.html"><button class="btn btn-outline-light btn-lg" data-aos="fade-left">
+                                Contact Us
+                            </button></a>
                     </div>
                 </div>
             </div>
@@ -119,7 +119,7 @@
             </div>
         </div>
 
-        
+
 
     </footer>
     <script src="assets/js/nav.js"></script>
