--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
 
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Quick Links</h5>
-                    <p><a href="#" class="text-light" style="text-decoration:none;">Home</a></p>
-                    <p><a href="#" class="text-light" style="text-decoration:none;">About Us</a></p>
-                    <p><a href="#" class="text-light" style="text-decoration:none;">Products</a></p>
-                    <p><a href="#" class="text-light" style="text-decoration:none;">Contact</a></p>
+                    <p><a href="index.html" class="text-light" style="text-decoration:none;">Home</a></p>
+                    <p><a href="#about" class="text-light" style="text-decoration:none;">About Us</a></p>
+                    <p><a href="#product" class="text-light" style="text-decoration:none;">Products</a></p>
+                    <p><a href="contact.html" class="text-light" style="text-decoration:none;">Contact</a></p>
                 </div>
 
 
